# placeholdgen

./: index.html  package.json  pnpm-lock.yaml
src/: App.svelte  app-types.ts  app.css  types.ts
src-tauri/: .gitignore  Cargo.toml  example.db  main.db  tauri.conf.json
src-tauri/bindings/: Collection.ts  ExternalSiteImage.ts  LocalSiteImage.ts  Site.ts
src-tauri/src/: main.rs
src-tauri/src/commands/: app_state.rs  collections.rs  db.rs  images.rs  mod.rs  settings.rs
src-tauri/src/types/: constants.rs  structs.rs
src/lib/: Layout.svelte
src/lib/EditSite/: Details.svelte  Export.svelte  Images.svelte
src/routes/: Dashboard.svelte  NotFound.svelte  Settings.svelte
src/routes/Site/: CreateSite.svelte  DeleteSite.svelte  EditSite.svelte
src/services/data/: _base.ts  collections.ts  images.ts  settings.ts  sites.ts
src/stores/: db.ts  sites.ts
src/types/: AppState.ts  Collection.ts  Settings.ts  Site.ts  SiteImage.ts
src/utils/: awaitable-timeout.ts  nanoid.ts
