[package]
name = "placeholdgen"
version = "0.1.0"
description = "A placeholder image site generator"
authors = ["you"]
license = ""
repository = ""
default-run = "placeholdgen"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
ts-rs = "6.1"
strum = "0.24"
strum_macros = "0.24"
heck = "0.4.0"
nanoid = "0.4.0"
glob = "0.3.0"
image-convert = "0.12.0"
ureq = {version = "2.5.0", features = ["json"] }

[dependencies.tauri-plugin-sqlite]
git = "https://github.com/lzdyes/tauri-plugin-sqlite"
tag = "v0.1.1"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
